Fotter and something changes

--- a/LR1/Main.html
+++ b/LR1/Main.html
@@ -1,10 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<html lang="ru">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>WoodFamily</title>
+        <link rel="stylesheet" href="MainStyle.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    </head>
+    <body class="d-flex flex-column min-vh-100">
+        <div class="container-fluid" >
+            <div class="row" style="max-width: 45%">
+                <div class="col-3">
+                     <a class="contact-phone" href="tel:89375381690" title="8 800 555 35 35">
+                         <span> 8 937 538 16 90</span>
+                     </a>
+                </div>
+                <div class="col-3">
+                    <div class="work-time">
+                        <span>9:00 - 18:00</span>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <a class="contact-mail" href="mailto:artem.kotegov@mail.ru" title="artem.kotegov@mail.ru">
+                        <span>artem.kotegov@mail.ru</span>
+                    </a>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-12">
+                    <nav class="navbar navbar-light bg-light">
+                        <div class="container-fluid">
+                            <div class="navbar-brand" href="#">
+                                <img src="icon.png" style="max-height: 150px; max-width: 250px">
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-lg">
+                    <div class="pictures">
+
+                    </div>
+                </div>
+                <div class="col-lg">
+                    <div class="row">
+                        <div class="item_name">
+                            <span>Доска ЛИСТВЕННИЦА, сорт АВС, 50х100х6000 мм</span>
+                        </div>
+                        <div class="item_name">
+                            <span>60,000.00 P</span>
+                        </div>
+                        <span>Цена розничная указана за м^3</span>
+                        <table class="table table-bordered">
+                            <thead>
+                            <tr>
+                                <th scope="col">Толщина</th>
+                                <th scope="col">50 мм</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>Ширина</td>
+                                <td>100 мм</td>
+                            </tr>
+                            <tr>
+                                <td>Длинна</td>
+                                <td>6000 мм</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="footer mt-auto py-3 bg-light">
+            <section class="">
+                <div class="container text-center text-md-start mt-5">
+                    <div class="row mt-3">
+
+                    </div>
+                </div>
+            </section>
+            <div class="text-left p-4" style="background-color: rgba(24,24,24,0.5);">
+                <p class="text-break">© 2022 ООО "Лесная семья" - дерево наш мир – Все права защищены. Официальный сайт</p>
+                <p class="text-break">ООО "Джей Эй Эф Рус" https://wood-family.ru</p>
+            </div>
+        </footer>
+    </body>
 </html>
