--- a/LR1/Main.html
+++ b/LR1/Main.html
@@ -32,7 +32,7 @@
                     <nav class="navbar navbar-light bg-light">
                         <div class="container-fluid">
                             <div class="navbar-brand" href="#">
-                                <img src="icon.png" style="max-height: 150px; max-width: 250px">
+                                <img src="icon.png" style="max-height: 150px; max-width: 200px">
                             </div>
                         </div>
                     </nav>
@@ -47,8 +47,8 @@
                 </div>
                 <div class="col-lg">
                     <div class="row">
-                        <div class="item_name">
-                            <span>Доска ЛИСТВЕННИЦА, сорт АВС, 50х100х6000 мм</span>
+                        <div class="item_name fw-weight-bold">
+                            Доска ЛИСТВЕННИЦА, сорт АВС, 50х100х6000 мм
                         </div>
                         <div class="item_name">
                             <span>60,000.00 P</span>
@@ -58,29 +58,60 @@
                             <thead>
                             <tr>
                                 <th scope="col">Толщина</th>
-                                <th scope="col">50 мм</th>
+                                <td scope="col">50 мм</td>
                             </tr>
                             </thead>
                             <tbody>
                             <tr>
-                                <td>Ширина</td>
+                                <th>Ширина</th>
                                 <td>100 мм</td>
                             </tr>
                             <tr>
-                                <td>Длинна</td>
+                                <th>Длинна</th>
                                 <td>6000 мм</td>
                             </tr>
                             </tbody>
                         </table>
+                        <div class="availability" style="color:red">
+                            <span>Нет в наличии</span>
+                        </div>
+                        <div class="information">
+                            <span>Артикул: 99999/0205-1 Категория: Обрезная доска Метка: Лиственница</span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <footer class="footer mt-auto py-3 bg-light">
-            <section class="">
-                <div class="container text-center text-md-start mt-5">
+            <section class="articles_block" style="background-color: rgba(24,24,24,0.45);">
+                <div class="container text-left text-md-start mt-5">
                     <div class="row mt-3">
+                        <div class="col-3">
+                            <div class="row">
+                                <span>Породы дерева</span>
+                            </div>
+                            <div class="row">
+                                <span>Каталог</span>
+                            </div>
+                            <div class="row">
+                                <span>JAF в мире</span>
+                            </div>
+                            <div class="row">
+                                <span>Контакты</span>
+                            </div>
+                        </div>
+                        <div class="col-5 float-end">
+                            <div class="articles text-left">
+                                Статьи
+                                <div class="row">
 
+                                </div>
+                                <ul class="list-group list-group-horizontal">
+                                    <li class="list-group-item" style="background-color: rgba(147,148,148);"><img src="articles1.jpg" style="max-width: 150px;max-height: 150px;">Особенности пород древесины</li>
+                                    <li class="list-group-item" style="background-color: rgba(147,148,148);"> <img src="articles2.jpg" style="max-width: 150px;max-height: 150px;">Мебельный щит и способы его применения</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
