--- a/LR1/Main.html
+++ b/LR1/Main.html
@@ -27,16 +27,37 @@
                 </div>
             </div>
             <hr>
+            <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <nav class="navbar navbar-light bg-light">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
                         <div class="container-fluid">
-                            <div class="navbar-brand" href="#">
-                                <img src="icon.png" style="max-height: 150px; max-width: 200px">
+                            <a class="navbar-brand" href="#">
+                                <img src="icon.png" style="max-width: 250px;max-height: 150px;">
+                            </a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            О нас
+                                        </a>
+                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <li><a class="dropdown-item" href="#">JAF в мире</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <form class="d-flex">
+                                    <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
+                                    <button class="btn btn-outline-success" type="submit">Поиск</button>
+                                </form>
                             </div>
                         </div>
                     </nav>
                 </div>
+            </div>
             </div>
             <hr>
             <div class="row">
@@ -83,7 +104,7 @@
             </div>
         </div>
         <footer class="footer mt-auto py-3 bg-light">
-            <section class="articles_block" style="background-color: rgba(24,24,24,0.45);">
+            <section class="articles_block" style="background-color: rgba(49,49,49,0.7);">
                 <div class="container text-left text-md-start mt-5">
                     <div class="row mt-3">
                         <div class="col-3">
@@ -100,22 +121,21 @@
                                 <span>Контакты</span>
                             </div>
                         </div>
-                        <div class="col-5 float-end">
+                        <div class="col-3 float-end">
                             <div class="articles text-left">
                                 Статьи
                                 <div class="row">
-
+                                    <ul class="list-group list-group-horizontal">
+                                        <li class="list-group-item" style="background-color: rgba(108,108,109);"><img src="articles1.jpg" style="max-width: 150px;max-height: 150px;">Особенности пород древесины</li>
+                                        <li class="list-group-item" style="background-color: rgba(108,108,109);"> <img src="articles2.jpg" style="max-width: 150px;max-height: 150px;">Мебельный щит и способы его применения</li>
+                                    </ul>
                                 </div>
-                                <ul class="list-group list-group-horizontal">
-                                    <li class="list-group-item" style="background-color: rgba(147,148,148);"><img src="articles1.jpg" style="max-width: 150px;max-height: 150px;">Особенности пород древесины</li>
-                                    <li class="list-group-item" style="background-color: rgba(147,148,148);"> <img src="articles2.jpg" style="max-width: 150px;max-height: 150px;">Мебельный щит и способы его применения</li>
-                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <div class="text-left p-4" style="background-color: rgba(24,24,24,0.5);">
+            <div class="text-left p-4" style="background-color: rgba(36,36,36,0.7);">
                 <p class="text-break">© 2022 ООО "Лесная семья" - дерево наш мир – Все права защищены. Официальный сайт</p>
                 <p class="text-break">ООО "Джей Эй Эф Рус" https://wood-family.ru</p>
             </div>
