--- a/LR1/Main.html
+++ b/LR1/Main.html
@@ -6,7 +6,7 @@
         <title>WoodFamily</title>
         <link rel="stylesheet" href="MainStyle.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    </head>
+        </head>
     <body class="d-flex flex-column min-vh-100">
         <div class="container-fluid" >
             <div class="row" style="max-width: 45%">
@@ -26,8 +26,9 @@
                     </a>
                 </div>
             </div>
-            <hr>
-            <div class="container-fluid">
+            <div class="container-fluid" style="box-shadow:
+            inset 0px 11px 8px -10px dimgrey,
+            inset 0px -11px 8px -10px dimgrey;  ;background-color: #F8F9FA">
             <div class="row">
                 <div class="col-12">
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -41,12 +42,76 @@
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                             О нас
                                         </a>
-                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
                                             <li><a class="dropdown-item" href="#">JAF в мире</a></li>
                                         </ul>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Продукция из древесины
+                                        </a>
+                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                                            <a class="dropdown-item" href="#">1-й уровень</a>
+                                            <a class="dropdown-item submenu" href="#">1-й уровень</a>
+                                            <div class="dropdown-menu">
+                                                <a class="dropdown-item" href="#">2-й уровень</a>
+                                                <a class="dropdown-item submenu" href="#">2-й уровень</a>
+                                                <div class="dropdown-menu">
+                                                    <a class="dropdown-item" href="#">3-й уровень</a>
+                                                    <a class="dropdown-item" href="#">3-й уровень</a>
+                                                </div>
+                                            </div>
+                                            <li><a class="dropdown-item" href="#">Шпон</a></li>
+                                            <li><a class="dropdown-item" href="#">Террасная доска</a></li>
+                                            <li><a class="dropdown-item" href="#">Фасадная доска</a></li>
+                                            <li><a class="dropdown-item" href="#">Термососна</a></li>
+                                            <li><a class="dropdown-item" href="#">Термоясень</a></li>
+                                            <li><a class="dropdown-item" href="#">Масло для дерева</a></li>
+                                            <li><a class="dropdown-item" href="#">Термососна</a></li>
+                                            <li><a class="dropdown-item" href="#">Крепеж</a></li>
+                                            <li><a class="dropdown-item" href="#">Столярная плита</a></li>
+                                            <li><a class="dropdown-item" href="#">Мебельный щит</a></li>
+                                            <li><a class="dropdown-item" href="#">Панели Мдф</a></li>
+                                            <li><a class="dropdown-item" href="#">Паркет</a></li>
+                                            <li><a class="dropdown-item" href="#">Фанера</a></li>
+                                            <li><a class="dropdown-item" href="#">Клей</a></li>
+                                            <li><a class="dropdown-item" href="#">Напольные покрытия Eurowood</a></li>
+                                            <li><a class="dropdown-item" href="#">Погонаж из лиственницы</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Кровельная продукция RUUKKI
+                                        </a>
+                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
+                                            <li><a class="dropdown-item" href="#">JAF в мире</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Заказ и оплата
+                                        </a>
+                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
+                                            <li><a class="dropdown-item" href="#">Оплата на сайте</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-x" href="#" id="navbarDropdown5" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Доставка
+                                        </a>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-x" href="#" id="navbarDropdown6" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Контакты
+                                        </a>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-x" href="#" id="navbarDropdown7" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Породы дерева
+                                        </a>
                                     </li>
                                 </ul>
                                 <form class="d-flex">
@@ -59,7 +124,6 @@
                 </div>
             </div>
             </div>
-            <hr>
             <div class="row">
                 <div class="col-lg">
                     <div class="pictures">
@@ -104,7 +168,7 @@
             </div>
         </div>
         <footer class="footer mt-auto py-3 bg-light">
-            <section class="articles_block" style="background-color: rgba(49,49,49,0.7);">
+            <section class="articles_block" style="background-color: #313131;">
                 <div class="container text-left text-md-start mt-5">
                     <div class="row mt-3">
                         <div class="col-3">
@@ -121,8 +185,11 @@
                                 <span>Контакты</span>
                             </div>
                         </div>
+                        <div class="col-6">
+
+                        </div>
                         <div class="col-3 float-end">
-                            <div class="articles text-left">
+                            <div class="articles text-left" style="color:#F2FFFF">
                                 Статьи
                                 <div class="row">
                                     <ul class="list-group list-group-horizontal">
@@ -135,10 +202,15 @@
                     </div>
                 </div>
             </section>
-            <div class="text-left p-4" style="background-color: rgba(36,36,36,0.7);">
-                <p class="text-break">© 2022 ООО "Лесная семья" - дерево наш мир – Все права защищены. Официальный сайт</p>
-                <p class="text-break">ООО "Джей Эй Эф Рус" https://wood-family.ru</p>
+            <div class="footer">
+                <div class="text-left p-4" style="background-color:#242424;">
+                    <p class="text-break" style=" color:#4C6A77">© 2022 ООО "Лесная семья" - дерево наш мир – Все права защищены. Официальный сайт</p>
+                    <p class="text-break" style=" color:#4C6A77">ООО "Джей Эй Эф Рус" https://wood-family.ru</p>
+                </div>
             </div>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
