--- a/LR1/Main.html
+++ b/LR1/Main.html
@@ -54,16 +54,20 @@
                                             Продукция из древесины
                                         </a>
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                            <a class="dropdown-item" href="#">1-й уровень</a>
-                                            <a class="dropdown-item submenu" href="#">1-й уровень</a>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="#">2-й уровень</a>
-                                                <a class="dropdown-item submenu" href="#">2-й уровень</a>
-                                                <div class="dropdown-menu">
-                                                    <a class="dropdown-item" href="#">3-й уровень</a>
-                                                    <a class="dropdown-item" href="#">3-й уровень</a>
-                                                </div>
-                                            </div>
+                                            <ul class="navbar-nav">
+                                                <li class="nav-item dropdown">
+                                                    <a class="nav-link dropdown-toggle" href="#" role="button" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                                                        Пиломатериалы
+                                                    </a>
+                                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                                        <li><a class="dropdown-item" href="#">Обрезанная доска</a></li>
+                                                        <li><a class="dropdown-item" href="#">Необрезанная доска</a></li>
+                                                        <li><a class="dropdown-item" href="#">Слэбы</a></li>
+                                                        <li><a class="dropdown-item" href="#">Торцевые спилы и капы</a></li>
+                                                        <li><a class="dropdown-item" href="#">Столярная заготовка</a></li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
                                             <li><a class="dropdown-item" href="#">Шпон</a></li>
                                             <li><a class="dropdown-item" href="#">Террасная доска</a></li>
                                             <li><a class="dropdown-item" href="#">Фасадная доска</a></li>
@@ -76,7 +80,16 @@
                                             <li><a class="dropdown-item" href="#">Мебельный щит</a></li>
                                             <li><a class="dropdown-item" href="#">Панели Мдф</a></li>
                                             <li><a class="dropdown-item" href="#">Паркет</a></li>
-                                            <li><a class="dropdown-item" href="#">Фанера</a></li>
+                                            <ul class="navbar-nav">
+                                                <li class="nav-item dropdown">
+                                                    <a class="nav-link dropdown-toggle" href="#" role="button" id="navbarDropdownMenuLink1" data-bs-toggle="dropdown" aria-expanded="false">
+                                                        Фанера
+                                                    </a>
+                                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
+                                                        <li><a class="dropdown-item" href="#">Ламинированная фанера</a></li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
                                             <li><a class="dropdown-item" href="#">Клей</a></li>
                                             <li><a class="dropdown-item" href="#">Напольные покрытия Eurowood</a></li>
                                             <li><a class="dropdown-item" href="#">Погонаж из лиственницы</a></li>
@@ -87,7 +100,18 @@
                                             Кровельная продукция RUUKKI
                                         </a>
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
-                                            <li><a class="dropdown-item" href="#">JAF в мире</a></li>
+                                            <li><a class="dropdown-item" href="#">Металлочерепица Hyygge</a></li>
+                                            <li><a class="dropdown-item" href="#">Металлочерепица Finnera</a></li>
+                                            <li><a class="dropdown-item" href="#">Металлочерепица Frigge</a></li>
+                                            <li><a class="dropdown-item" href="#">Металлочерепица Adamante</a></li>
+                                            <li><a class="dropdown-item" href="#">Металлочерепица Elite</a></li>
+                                            <li><a class="dropdown-item" href="#">Металлочерепица Monterrey</a></li>
+                                            <li><a class="dropdown-item" href="#">Металлочерепица Monterrey FEB</a></li>
+                                            <li><a class="dropdown-item" href="#">Металлочерепица Classic C</a></li>
+                                            <li><a class="dropdown-item" href="#">Металлочерепица Classic D</a></li>
+                                            <li><a class="dropdown-item" href="#">Металлочерепица Classic Silence</a></li>
+                                            <li><a class="dropdown-item" href="#">Металлочерепица Classic Authentic</a></li>
+                                            <li><a class="dropdown-item" href="#">Металлочерепица Ruukki Classic M</a></li>
                                         </ul>
                                     </li>
                                     <li class="nav-item dropdown">
@@ -124,51 +148,119 @@
                 </div>
             </div>
             </div>
-            <div class="row">
-                <div class="col-lg">
-                    <div class="pictures">
-
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="pictures">
+                            <img src="jaf-доска-лиственница.jpg" style="max-width: 60%;max-height: 55%;">
+                        </div>
+                    </div>
+                    <div class="col-lg">
+                        <div class="row">
+                            <div class="item_name fw-weight-bold">
+                                Доска ЛИСТВЕННИЦА, сорт АВС, 50х100х6000 мм
+                            </div>
+                            <div class="item_name">
+                                <span>60,000.00 P</span>
+                            </div>
+                            <span>Цена розничная указана за м^3</span>
+                            <table class="table table-bordered">
+                                <thead>
+                                <tr>
+                                    <th scope="col">Толщина</th>
+                                    <td scope="col">50 мм</td>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <th>Ширина</th>
+                                    <td>100 мм</td>
+                                </tr>
+                                <tr>
+                                    <th>Длинна</th>
+                                    <td>6000 мм</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <div class="availability" style="color:red">
+                                <span>Нет в наличии</span>
+                            </div>
+                            <div class="information">
+                                <span>Артикул: 99999/0205-1 Категория: Обрезная доска Метка: Лиственница</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg">
+                <div class="similar">
                     <div class="row">
-                        <div class="item_name fw-weight-bold">
-                            Доска ЛИСТВЕННИЦА, сорт АВС, 50х100х6000 мм
+                        <span>Похожие товары</span>
+                        <div class="col-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="JAF-доска-пола-лиственница-300x300.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Доска пола Лиственница ВС
+                                        <span>769.00 P</span>
+                                        <br>
+                                        <button>
+                                            В корзину
+                                        </button>
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="item_name">
-                            <span>60,000.00 P</span>
+                        <div class="col-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="jaf-террасная-доска-лиственница-300x300.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Террасная доска Лиственница Прима
+                                        <span>2,550.00 P</span>
+                                        <br>
+                                        <button>
+                                            В корзину
+                                        </button>
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                        <span>Цена розничная указана за м^3</span>
-                        <table class="table table-bordered">
-                            <thead>
-                            <tr>
-                                <th scope="col">Толщина</th>
-                                <td scope="col">50 мм</td>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <th>Ширина</th>
-                                <td>100 мм</td>
-                            </tr>
-                            <tr>
-                                <th>Длинна</th>
-                                <td>6000 мм</td>
-                            </tr>
-                            </tbody>
-                        </table>
-                        <div class="availability" style="color:red">
-                            <span>Нет в наличии</span>
+                        <div class="col-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="jaf-доска-ясень-300x300.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Доска ЯСЕНЬ сорт AB, длина от 2000 мм, толщина 30/50 мм
+                                        <span>153,400.00 P</span>
+                                        <br>
+                                        <button>
+                                            В корзину
+                                        </button>
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="information">
-                            <span>Артикул: 99999/0205-1 Категория: Обрезная доска Метка: Лиственница</span>
+                        <div class="col-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="jaf-лага-лиственница-300x300.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Лага лиственница цельностроганая АВ
+                                        <span>300.00 P</span>
+                                        <br>
+                                        <button>
+                                            В корзину
+                                        </button>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <footer class="footer mt-auto py-3 bg-light">
-            <section class="articles_block" style="background-color: #313131;">
+            <section class="articles_block" style="background-color: #313131;color:#77737E">
                 <div class="container text-left text-md-start mt-5">
                     <div class="row mt-3">
                         <div class="col-3">
@@ -193,8 +285,8 @@
                                 Статьи
                                 <div class="row">
                                     <ul class="list-group list-group-horizontal">
-                                        <li class="list-group-item" style="background-color: rgba(108,108,109);"><img src="articles1.jpg" style="max-width: 150px;max-height: 150px;">Особенности пород древесины</li>
-                                        <li class="list-group-item" style="background-color: rgba(108,108,109);"> <img src="articles2.jpg" style="max-width: 150px;max-height: 150px;">Мебельный щит и способы его применения</li>
+                                        <li class="list-group-item" style="background-color: #313131;"><img src="articles1.jpg" style="max-width: 150px;max-height: 150px;color:#3A3A3A">Особенности пород древесины</li>
+                                        <li class="list-group-item" style="background-color: #313131;"> <img src="articles2.jpg" style="max-width: 150px;max-height: 150px;color:#3A3A3A">Мебельный щит и способы его применения</li>
                                     </ul>
                                 </div>
                             </div>
@@ -204,8 +296,8 @@
             </section>
             <div class="footer">
                 <div class="text-left p-4" style="background-color:#242424;">
-                    <p class="text-break" style=" color:#4C6A77">© 2022 ООО "Лесная семья" - дерево наш мир – Все права защищены. Официальный сайт</p>
-                    <p class="text-break" style=" color:#4C6A77">ООО "Джей Эй Эф Рус" https://wood-family.ru</p>
+                    <p class="text-break" style=" color:#77737E">© 2022 ООО "Лесная семья" - дерево наш мир – Все права защищены. Официальный сайт</p>
+                    <p class="text-break" style=" color:#77737E">ООО "Джей Эй Эф Рус" https://wood-family.ru</p>
                 </div>
             </div>
         </footer>
