--- a/LR1/Main.html
+++ b/LR1/Main.html
@@ -190,10 +190,27 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-1">
+                            <input name="input" type="button" value="Описание" onclick="document.getElementById('pole').value='Описание\n'+'Производитель: Красноярск\n'+'\n'+'Обрезная доска из лиственницы — это неотшлифованный пласт дерева, очищенный от коры и обзола. Лиственница прекрасно зарекомендовала себя в качестве строительного материала для создания различных пристроек, покрытия полов и устройства придомовых территорий. Доски из лиственницы востребованы благодаря прочности, прекрасному внешнему виду и долговечности.';"/>
+                        </div>
+                        <div class="col-1">
+                            <input name="input" type="button" value="Детали" onclick="document.getElementById('pole').value='';"/>
+                        </div>
+                        <div class="col-1">
+                            <input name="input" type="button" value="Отзывы(0)" onclick="document.getElementById('pole').value='';"/>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <span class="fs-3"> Описание </span>
+                        <span> Производитель: Красноярск </span>
+                        <span>Обрезная доска из лиственницы — это неотшлифованный пласт дерева, очищенный от коры и обзола. Лиственница прекрасно зарекомендовала себя в качестве строительного материала для создания различных пристроек, покрытия полов и устройства придомовых территорий. Доски из лиственницы востребованы благодаря прочности, прекрасному внешнему виду и долговечности.</span>
+                    </div>
                 </div>
                 <div class="similar">
                     <div class="row">
-                        <span>Похожие товары</span>
+                        <span class="fs-3">Похожие товары</span>
                         <div class="col-3">
                             <div class="card" style="width: 18rem;">
                                 <img src="JAF-доска-пола-лиственница-300x300.jpg" class="card-img-top" alt="...">
