--- a/LR1/index.html
+++ b/LR1/index.html
@@ -27,14 +27,14 @@
                 </div>
             </div>
             <div class="container-fluid" style="box-shadow:
-            inset 0px 11px 8px -10px dimgrey,
-            inset 0px -11px 8px -10px dimgrey;  ;background-color: #F8F9FA">
+            0 15px 15px  -15px dimgrey ,
+            0 -15px 15px  -15px dimgrey;  ;background-color: #F8F9FA">
             <div class="row">
                 <div class="col-12">
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
                         <div class="container-fluid">
                             <a class="navbar-brand" href="#">
-                                <img src="icon.png" style="max-width: 250px;max-height: 150px;">
+                                <img src="images/icon.png" style="max-width: 250px;max-height: 150px;">
                             </a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
                                 <span class="navbar-toggler-icon"></span>
@@ -148,11 +148,18 @@
                 </div>
             </div>
             </div>
+            <div class="row">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item active" aria-current="page">Главная</li>
+                    </ol>
+                </nav>
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col">
                         <div class="pictures">
-                            <img src="jaf-доска-лиственница.jpg" style="max-width: 60%;max-height: 55%;">
+                            <img src="images/jaf-доска-лиственница.jpg" style="max-width: 60%;max-height: 55%;">
                         </div>
                     </div>
                     <div class="col-lg">
@@ -213,7 +220,7 @@
                         <span class="fs-3">Похожие товары</span>
                         <div class="col-3">
                             <div class="card" style="width: 18rem;">
-                                <img src="JAF-доска-пола-лиственница-300x300.jpg" class="card-img-top" alt="...">
+                                <img src="images/JAF-доска-пола-лиственница-300x300.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Доска пола Лиственница ВС
@@ -228,7 +235,7 @@
                         </div>
                         <div class="col-3">
                             <div class="card" style="width: 18rem;">
-                                <img src="jaf-террасная-доска-лиственница-300x300.jpg" class="card-img-top" alt="...">
+                                <img src="images/jaf-террасная-доска-лиственница-300x300.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Террасная доска Лиственница Прима
@@ -243,7 +250,7 @@
                         </div>
                         <div class="col-3">
                             <div class="card" style="width: 18rem;">
-                                <img src="jaf-доска-ясень-300x300.jpg" class="card-img-top" alt="...">
+                                <img src="images/jaf-доска-ясень-300x300.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Доска ЯСЕНЬ сорт AB, длина от 2000 мм, толщина 30/50 мм
@@ -258,7 +265,7 @@
                         </div>
                         <div class="col-3">
                             <div class="card" style="width: 18rem;">
-                                <img src="jaf-лага-лиственница-300x300.jpg" class="card-img-top" alt="...">
+                                <img src="images/jaf-лага-лиственница-300x300.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Лага лиственница цельностроганая АВ
@@ -302,8 +309,8 @@
                                 Статьи
                                 <div class="row">
                                     <ul class="list-group list-group-horizontal">
-                                        <li class="list-group-item" style="background-color: #313131;"><img src="articles1.jpg" style="max-width: 150px;max-height: 150px;color:#3A3A3A">Особенности пород древесины</li>
-                                        <li class="list-group-item" style="background-color: #313131;"> <img src="articles2.jpg" style="max-width: 150px;max-height: 150px;color:#3A3A3A">Мебельный щит и способы его применения</li>
+                                        <li class="list-group-item" style="background-color: #313131;"><img src="images/articles1.jpg" style="max-width: 150px;max-height: 150px;color:#3A3A3A">Особенности пород древесины</li>
+                                        <li class="list-group-item" style="background-color: #313131;"> <img src="images/articles2.jpg" style="max-width: 150px;max-height: 150px;color:#3A3A3A">Мебельный щит и способы его применения</li>
                                     </ul>
                                 </div>
                             </div>
